<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/negro_navbar">

        <ImageView
            android:id="@+id/btnMenu"
            android:contentDescription="@string/abrir_menu"
            android:layout_width="@dimen/menu_icon_dimen"
            android:layout_height="@dimen/menu_icon_dimen"
            android:padding="12dp"
            android:src="@drawable/ic_menu"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/textViewUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/bienvenida_predeterminada"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/sidebarContenedor"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/negro_navbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/magin_bottom"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="@dimen/dimen_image"
                    android:layout_height="@dimen/dimen_image"
                    android:src="@drawable/ic_logo_cube"
                    app:tint="@color/naranja" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/name_empresa"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_name_text"
                    android:textStyle="bold"/>

            </LinearLayout>

            <include android:id="@+id/itemInicio" layout="@layout/item_sidebar_inicio"/>
            <include android:id="@+id/itemMateriales" layout="@layout/item_sidebar_materiales"/>
            <include android:id="@+id/itemTipoMaterial" layout="@layout/item_sidebar_tipomaterial"/>
            <include android:id="@+id/itemProveedores" layout="@layout/item_sidebar_proveedores"/>
            <include android:id="@+id/itemOrdenCompra" layout="@layout/item_sidebar_ordencompra"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/itemCerrarSesion"
                android:contentDescription="@string/cerrando_sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="@dimen/dimen_view"
                    android:layout_height="@dimen/dimen_view"
                    android:src="@drawable/ic_cerrarsesion"
                    app:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_bar_cerrar_sesion"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_navbar_text"
                    android:layout_marginTop="2dp"/>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/ContenedorFragmento"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>